# classyfire_py

./: .gitignore  README.md  inchikey_examples.csv  pyproject.toml
.github/workflows/: python-package.yml
src/classyfire/: __init__.py  classyfire.py  pubchem.py
tests/: test_classyfire.py  test_pubchem.py
