[project]
name = "classyfire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "csaltikov", email = "saltikov@ucsc.edu" }
]
requires-python = ">=3.13"
dependencies = ["requests", "pandas"]

[project.scripts]
classyfire = "classyfire:main"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"
